now ready to deploy

--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo reiciendis ut facilis cum sed voluptatum, sint aperiam repudiandae laborum sapiente ratione pariatur dolorum aspernatur perferendis nihil expedita odio tempora modi?</p>
         </div>
     </div>
+
+    <footer>
+        <p>&#169;pepcoding2k22</p>
+    </footer>
 </body>
 </html>
